--- a/openstack/monasca-ui/monasca-ui.spec.j2
+++ b/openstack/monasca-ui/monasca-ui.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'monasca-ui' %}
-{% set upstream_version = upstream_version('1.5.0') %}
+{% set upstream_version = upstream_version('1.7.1') %}
 {% set rpm_release = '1' %}
 
 %global sname {{ pypi_name }}
@@ -48,7 +48,9 @@ The Monasca UI Horizon plugin adds Monitoring panel to the OpenStack dashboard.
 %py2_install
 
 install -m 0755 -d %{buildroot}%{http_dashboard_dir}/openstack_dashboard/enabled/
+install -m 0755 -d %{buildroot}%{http_dashboard_dir}/openstack_dashboard/conf/
 cp -a monitoring/enabled/_50_admin_add_monitoring_panel.py %{buildroot}%{http_dashboard_dir}/openstack_dashboard/enabled/
+cp -a monitoring/conf/monitoring_policy.json %{buildroot}%{http_dashboard_dir}/openstack_dashboard/conf/
 %fdupes %{buildroot}%{python2_sitelib}
 %fdupes %{buildroot}%{http_dashboard_dir}
 
@@ -60,6 +62,7 @@ su %{apache_user} -s /bin/sh -c "python %{http_dashboard_dir}/manage.py collects
 
 %files
 %{http_dashboard_dir}/openstack_dashboard/enabled/_50_admin_add_monitoring_panel.py
+%{http_dashboard_dir}/openstack_dashboard/conf/monitoring_policy.json
 %doc ChangeLog README.md LICENSE
 
 %files -n {{ py2pkg('horizon-plugin-monasca-ui') }}
