--- a/openstack/python-keystoneclient/python-keystoneclient.spec.j2
+++ b/openstack/python-keystoneclient/python-keystoneclient.spec.j2
@@ -1,7 +1,7 @@
 %global sname python-keystoneclient
 Name:           {{ py2name('python-keystoneclient') }}
 Epoch:          {{ epoch('python-keystoneclient') }}
-Version:        3.11.0
+Version:        3.12.0
 Release:        0
 Summary:        Client library for OpenStack Identity API
 License:        {{ license('Apache-2.0') }}
@@ -55,6 +55,8 @@ Identity API.
 %prep
 %autosetup -p1 -n %{sname}-%{version}
 %py_req_cleanup
+# disable intersphinx - no network access during build
+echo "intersphinx_mapping = {}" >> doc/source/conf.py
 
 %build
 %{py2_build}
