--- a/openstack/python-openstackclient/python-openstackclient.spec.j2
+++ b/openstack/python-openstackclient/python-openstackclient.spec.j2
@@ -80,7 +80,8 @@ This package contains auto-generated documentation.
 %build
 %{py2_build}
 
-%{__python2} setup.py build_sphinx
+%{__python2} setup.py build_sphinx -b html
+%{__python2} setup.py build_sphinx -b man
 # remove the sphinx-build leftovers
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
