Update castellan to 0.11.0
Change-Id: I7b6470179aa6eca0a6db291cff4cdd8a031a1468
Depends-on: I6e8da30b4670596c66edde6a8f3512dcbc0c32ce

--- a/openstack/castellan/castellan.spec.j2
+++ b/openstack/castellan/castellan.spec.j2
@@ -1,6 +1,6 @@
 %global sname castellan
 Name:           {{ py2name('castellan') }}
-Version:        0.10.0
+Version:        0.11.0
 Release:        0
 Summary:        Generic Key Manager interface for OpenStack
 License:        {{ license('Apache-2.0') }}
@@ -35,7 +35,7 @@ Generic Key Manager interface for OpenStack.
 Summary:        Documentation for castellan
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Castellan is a generic Key Manager interface for OpenStack.
