Update oslo.serialization to 2.20.0
Change-Id: Icf7ea0adeab6800c3128fcb8183c9ff14d3a845e
Depends-on: I055b1b7a68d492270cfb94b8f0a1a79b898027b8

--- a/openstack/oslo.serialization/oslo.serialization.spec.j2
+++ b/openstack/oslo.serialization/oslo.serialization.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.serialization
 Name:           {{ py2name('oslo.serialization') }}
-Version:        2.18.0
+Version:        2.20.0
 Release:        0
 Summary:        OpenStack serialization library
 License:        {{ license('Apache-2.0') }}
@@ -30,7 +30,7 @@ in transmittable and storable formats, such as Base64, JSON and MessagePack.
 %package doc
 Summary:        Documentation for OpenStack serialization library
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 The oslo.serialization library provides support for representing objects
@@ -40,6 +40,7 @@ This package contains the documentation.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
