--- a/openstack/openstackdocstheme/openstackdocstheme.spec.j2
+++ b/openstack/openstackdocstheme/openstackdocstheme.spec.j2
@@ -7,6 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+# https://review.openstack.org/#/c/480126/1
+Patch1:         0001-Allow-using-openstackdocstheme-without-git-installed.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('devel') }}
@@ -14,7 +16,7 @@ BuildRequires:  {{ py2pkg('os-api-ref') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('reno') }}
-BuildRequires: {{ py2pkg('requests') }}
+BuildRequires:  {{ py2pkg('requests') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
 Requires:       {{ py2pkg('Sphinx') }}
 Requires:       {{ py2pkg('oslosphinx') }}
@@ -26,8 +28,9 @@ Theme and extension support for Sphinx documentation that is published
 to docs.openstack.org. Intended for use by OpenStack projects.
 
 %prep
-%autosetup -n %{sname}-%{version}
-# we don't need hacking
+%autosetup -p1 -n %{sname}-%{version}
+
+# we dont need hacking
 sed -i '/^hacking.*/d' test-requirements.txt
 %py_req_cleanup
 
