Update osc-lib to 1.7.0
Also:
- add missing osc-lib BuildRequires and Requires to python-monascaclient
- add a patch to python-tripleoclient to make it compatible with the
  new osc-lib version
- add a patch to python-openstackclient to make it compatible with the
  new osc-lib version

Co-Authored-By: Thomas Bechtold <tbechtold@suse.com>
Change-Id: I48ef17ebaac3481b9ba27a8671bfd097cbdac925
Depends-on: I4c8dc50884c4257c73f4db01e2f648e13752ea33

--- a/openstack/osc-lib/osc-lib.spec.j2
+++ b/openstack/osc-lib/osc-lib.spec.j2
@@ -1,6 +1,6 @@
 %global sname osc-lib
 Name:           {{ py2name('osc-lib') }}
-Version:        1.6.0
+Version:        1.7.0
 Release:        0
 Summary:        OpenStackClient Library
 License:        {{ license('Apache-2.0') }}
@@ -47,7 +47,7 @@ is a package of common support modules for writing OSC plugins.
 %package doc
 Summary:        Documentation for the OpenStack client library
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Documentation for the OpenStack client library.
@@ -55,6 +55,7 @@ Documentation for the OpenStack client library.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{__python2} setup.py build
