Update oslo.log to 3.29.0
Change-Id: I095c50455ee92cac7e9487fe678bf908c70c69a5
Depends-on: I75e401b8d3a30e6a8da619efee244f1fefc8fc75

--- a/openstack/oslo.log/oslo.log.spec.j2
+++ b/openstack/oslo.log/oslo.log.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.log
 Name:           {{ py2name('oslo.log') }}
-Version:        3.28.1
+Version:        3.29.0
 Release:        0
 Summary:        OpenStack log library
 License:        {{ license('Apache-2.0') }}
@@ -45,7 +45,7 @@ support for context specific logging (like resource id's etc).
 %package doc
 Summary:        Documentation for OpenStack log library
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Documentation for the oslo.log library.
@@ -53,6 +53,7 @@ Documentation for the oslo.log library.
 %prep
 %autosetup -n %{sname}-%{version} -p1
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
