Update oslo.rootwrap to 5.8.0
Change-Id: I1cd1b8f92557646b67cf57b129e329f3098cebe3
Depends-on: I3cffe768752950d06bb617d1c275e6ee7d29dff2

--- a/openstack/oslo.rootwrap/oslo.rootwrap.spec.j2
+++ b/openstack/oslo.rootwrap/oslo.rootwrap.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.rootwrap
 Name:           {{ py2name('oslo.rootwrap') }}
-Version:        5.7.0
+Version:        5.8.0
 Release:        0
 Summary:        Filtering shell commands to run as root from OpenStack services
 License:        {{ license('Apache-2.0') }}
@@ -34,7 +34,7 @@ from OpenStack services.
 %package doc
 Summary:        Documentation for OpenStack %{sname}
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
 
 %description doc
@@ -43,6 +43,7 @@ Documentation for the OpenStack %{sname} library.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
