--- a/openstack/tooz/tooz.spec.j2
+++ b/openstack/tooz/tooz.spec.j2
@@ -1,6 +1,6 @@
 %global pypi_name tooz
 Name:           {{ py2name('tooz') }}
-Version:        1.57.3
+Version:        1.58.0
 Release:        0
 Summary:        Coordination library for distributed systems
 License:        {{ license('Apache-2.0') }}
@@ -9,13 +9,16 @@ Url:            http://docs.openstack.org/developer/tooz/
 Source0:        https://pypi.io/packages/source/t/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
+BuildRequires:  {{ py2pkg('enum34') }}
 BuildRequires:  {{ py2pkg('fasteners') }}
 BuildRequires:  {{ py2pkg('futures') }}
 BuildRequires:  {{ py2pkg('futurist') }}
 BuildRequires:  {{ py2pkg('iso8601') }}
 BuildRequires:  {{ py2pkg('oslo.serialization') }}
+BuildRequires:  {{ py2pkg('oslo.utils') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
+BuildRequires:  {{ py2pkg('stevedore') }}
 BuildRequires:  {{ py2pkg('tenacity') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 BuildRequires:  {{ py2pkg('voluptuous') }}
@@ -44,11 +47,7 @@ a coordination API helping developers to build distributed applications.
 Summary:        Documentation for %{name}
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('enum34') }}
-BuildRequires:  {{ py2pkg('futures') }}
-BuildRequires:  {{ py2pkg('oslo.utils') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
-BuildRequires:  {{ py2pkg('stevedore') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 The Tooz project aims at centralizing the most common distributed primitives
@@ -60,6 +59,7 @@ This package contains documentation in HTML format.
 %prep
 %autosetup -n %{pypi_name}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
