--- a/openstack/oslo.service/oslo.service.spec.j2
+++ b/openstack/oslo.service/oslo.service.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.service
 Name:           {{ py2name('oslo.service') }}
-Version:        1.24.0
+Version:        1.24.1
 Release:        0
 Summary:        OpenStack oslo.service library
 License:        {{ license('Apache-2.0') }}
@@ -51,7 +51,7 @@ performing periodic operations, interacting with systemd, etc.
 %package doc
 Summary:        Documentation for OpenStack service library
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
 
 %description doc
@@ -64,6 +64,7 @@ This package contains the documentation.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
