--- a/openstack/stevedore/stevedore.spec.j2
+++ b/openstack/stevedore/stevedore.spec.j2
@@ -1,6 +1,6 @@
 %global pypi_name stevedore
 Name:           {{ py2name('stevedore') }}
-Version:        1.23.0
+Version:        1.24.0
 Release:        0
 Summary:        Manage dynamic plugins for Python applications
 License:        {{ license('Apache-2.0') }}
@@ -33,7 +33,7 @@ dynamically loaded extensions.
 Summary:        Documentation for %{name}
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Python makes loading code dynamically easy, allowing you to configure
@@ -51,6 +51,7 @@ This package contains documentation in HTML format.
 %prep
 %autosetup -n %{pypi_name}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
