--- a/openstack/oslo.db/oslo.db.spec.j2
+++ b/openstack/oslo.db/oslo.db.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.db
 Name:           {{ py2name('oslo.db') }}
-Version:        4.24.0
+Version:        4.24.1
 Release:        0
 Summary:        OpenStack oslo.db library
 License:        {{ license('Apache-2.0') }}
@@ -56,7 +56,7 @@ to the different backends and helper utils.
 Summary:        Documentation for the Oslo database handling library
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Documentation for the Oslo database handling library.
@@ -64,6 +64,7 @@ Documentation for the Oslo database handling library.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
