Update oslo.reports to 1.21.1
Change-Id: I9a6e0ba919d5b0652c19bce2e84b9a89b17ddde8
Depends-on: I83552f9e353e04abb853c41c258568aa69168eb1

--- a/openstack/oslo.reports/oslo.reports.spec.j2
+++ b/openstack/oslo.reports/oslo.reports.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.reports
 Name:           {{ py2name('oslo.reports') }}
-Version:        1.21.0
+Version:        1.21.1
 Release:        0
 Summary:        OpenStack oslo.reports library
 License:        {{ license('Apache-2.0') }}
@@ -35,7 +35,7 @@ framework, known as the "guru meditation report".
 %package doc
 Summary:        Documentation for OpenStack reports library
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 The project oslo.reports hosts a general purpose error report generation
@@ -45,6 +45,7 @@ This package contains the documentation.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
