--- a/openstack/os-brick/os-brick.spec.j2
+++ b/openstack/os-brick/os-brick.spec.j2
@@ -1,6 +1,6 @@
 %global sname os-brick
 Name:           {{ py2name('os-brick') }}
-Version:        1.13.1
+Version:        1.15.1
 Release:        0
 Summary:        OpenStack Cinder brick library for managing local volume attaches
 License:        {{ license('Apache-2.0') }}
@@ -70,6 +70,7 @@ This package contains the documentation.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
