--- a/openstack/oslo.concurrency/oslo.concurrency.spec.j2
+++ b/openstack/oslo.concurrency/oslo.concurrency.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.concurrency
 Name:           {{ py2name('oslo.concurrency') }}
-Version:        3.20.0
+Version:        3.21.0
 Release:        0
 Summary:        OpenStack oslo.concurrency library
 License:        {{ license('Apache-2.0') }}
@@ -41,7 +41,7 @@ external processes.
 %package doc
 Summary:        Documentation for OpenStack concurrency library
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 The oslo.concurrency library has utilities for safely running multi-thread,
@@ -52,6 +52,7 @@ This package contains the documentation.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
