--- a/openstack/oslo.privsep/oslo.privsep.spec.j2
+++ b/openstack/oslo.privsep/oslo.privsep.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.privsep
 Name:           {{ py2name('oslo.privsep') }}
-Version:        1.21.1
+Version:        1.22.0
 Release:        0
 Summary:        OpenStack library for privilege separation
 License:        {{ license('Apache-2.0') }}
@@ -16,11 +16,11 @@ BuildRequires:  {{ py2pkg('enum34') }}
 BuildRequires:  {{ py2pkg('eventlet') }}
 BuildRequires:  {{ py2pkg('greenlet') }}
 BuildRequires:  {{ py2pkg('msgpack-python') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('oslo.config') }}
 BuildRequires:  {{ py2pkg('oslo.i18n') }}
 BuildRequires:  {{ py2pkg('oslo.log') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
@@ -49,6 +49,7 @@ Documentation for oslo.privsep
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
